--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="./app.css" rel="stylesheet">
     <script defer src="app.js"></script>
-    <title>Frontend Assignment</title>
+    <title>KreativFly Bihar</title>
 </head>
 <body>
     <!-- menu list/navbar starts here -->
     <navbar>
         <ul class="menu_list">
             <li class="menu_list_item">
+                <a href="#">KreativFly Bihar</a><br />
                 <span class="material-icons">all_inclusive </span>
+
 
             </li>
 
@@ -97,8 +99,9 @@
 
 <!-- modal for me button-->
 <div class="me_menu_modal" id="me_menu_modal">
-    <h3>We are working on it, to get you a beautifull account.</h3>
-    <button class="btn btn-success"id="close_me_modal" onclick="closeMeModal()">OK! Understood</button>
+    
+    <button class="btn btn-success"id="close_me_modal_btn" style="display:none" onclick="closeMeModal()">OK! Understood</button>
+
 </div>
 
 <!--modal for me button ends-->
